--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@ function updateCountdowns() {
 
     if (!currentClass.days.includes(currentDay)) {
         hasCopiedScores = false;
+        hasResetReturned = false; // Reset flag when class day changes
         return;
     }
 
@@ -312,8 +313,8 @@ function updateCountdowns() {
         conclusionDiv.className = 'conclusion-countdown';
         conclusionDiv.textContent = `Conclusion: ${minutes}m ${seconds}s`;
         countdownContainer.appendChild(conclusionDiv);
-    }
-    else if (endDiff <= 300 && endDiff > 0) {
+        hasResetReturned = false; // Reset flag when entering conclusion phase
+    } else if (endDiff <= 300 && endDiff > 0 && !hasResetReturned) {
         const minutes = Math.floor(endDiff / 60);
         const seconds = Math.floor(endDiff % 60);
         const packupDiv = document.createElement('div');
@@ -321,9 +322,12 @@ function updateCountdowns() {
         packupDiv.textContent = `♫ Pack up: ${minutes}m ${seconds}s ♫`;
         countdownContainer.appendChild(packupDiv);
         if (currentClass.criteria.includes('returned')) {
-            const checkboxes = document.querySelectorAll(`.spreadsheet-row .checkbox-container:nth-child(${currentClass.criteria.indexOf('returned') + 3}) input[type="checkbox"]`);
+            console.log('Resetting returned checkboxes for class:', currentClass.name);
+            const checkboxIndex = currentClass.criteria.indexOf('returned') + 3;
+            const checkboxes = document.querySelectorAll(`.spreadsheet-row .checkbox-container:nth-child(${checkboxIndex}) input[type="checkbox"]`);
             checkboxes.forEach((checkbox, index) => {
                 if (checkbox.checked) {
+                    console.log('Unchecking returned for student:', teacherModeOrder[index]);
                     checkbox.checked = false;
                     const studentName = teacherModeOrder[index];
                     if (studentName) {
@@ -331,12 +335,13 @@ function updateCountdowns() {
                     }
                 }
             });
+            hasResetReturned = true; // Set flag to prevent further resets
         }
         hasCopiedScores = false;
-    }
-    else if (endDiff <= 0 && endDiff > -2 && !hasCopiedScores) {
+    } else if (endDiff <= 0 && endDiff > -2 && !hasCopiedScores) {
         exportScores();
         hasCopiedScores = true;
+        hasResetReturned = false; // Reset flag after class ends
     }
 }
 
@@ -451,6 +456,7 @@ let searchBox = null;
 let searchResults = null;
 let selectedIndex = 0;
 let hasCopiedScores = false;
+let hasResetReturned = false;
 let isActive = false;
 let currentPoints = 0;
 
@@ -505,18 +511,21 @@ function closeTopMenu() {
             currentMode = MODES.GLOBAL;
             isAddingStudent = false;
             document.removeEventListener('click', handleSearchOutsideClick);
+            if (searchBox) {
+                searchBox.remove();
+                searchBox = null;
+                searchResults = null;
+            }
         } else if (topMenu.id === 'houseshield') {
             deactivateHouseshield();
         } else if (topMenu.id === 'floating-menu') {
             resetBarHighlights();
-        } else if (topMenu.id === 'teacher-mode') {
-            // Ensure teacher mode cleanup
         }
         if (menuStack.length === 0) {
-            currentMode = MODES.GLOBAL;
+            currentMode = MODES.GLOBAL; // Explicitly reset mode
         }
         console.log('Top menu closed, id:', topMenu.id, 'currentMode:', currentMode, 'menuStack:', menuStack);
-        document.activeElement.blur(); // Remove focus from any element
+        document.activeElement.blur();
     }
 }
 
@@ -1514,7 +1523,7 @@ function exportScores() {
             console.error('Failed to export scores: ', err);
         });
     } else {
-        // For non-macOS, export as CSV to E: drive
+        // For non-macOS, export as CSV
         const now = new Date();
         const dateStr = now.toLocaleDateString('en-US', { year: 'numeric', month: '2-digit', day: '2-digit' }).replace(/\//g, '-');
         const className = classes[currentClassIndex].name.replace(/[^a-zA-Z0-9]/g, '_');
@@ -1531,19 +1540,20 @@ function exportScores() {
             ...additionalStudentsMessage
         ];
         const csvContent = csvRows.join('\n');
-        const fs = window.require ? window.require('fs') : require('fs'); // For Electron or Node.js environment
-        const path = window.require ? window.require('path') : require('path');
-        const filePath = path.join('E:', `${className}_Scores_${dateStr}.csv`);
-        
-        try {
-            fs.writeFileSync(filePath, csvContent);
-            const message = `House points for today:\n${housePointsItemized.map(item => `${item.name}: ${item.points > 0 ? '+' : ''}${item.points}`).join('\n')}\n\n${tardiesItemized.length > 0 ? `Tardies:\n${tardiesItemized.join('\n')}` : 'No tardies'}${additionalStudentsMessage.length > 0 ? `\n\nAdditional students:\n${additionalStudents.map(s => s.name).join('\n')}` : ''}\n\nReset scores?`;
-            showCustomAlert(message);
-            showTemporaryMessage(`Scores exported to ${filePath}`);
-        } catch (err) {
-            console.error('Failed to export scores to file: ', err);
-            showTemporaryMessage('Failed to export scores to E: drive');
-        }
+        const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+        const link = document.createElement('a');
+        const url = URL.createObjectURL(blob);
+        link.setAttribute('href', url);
+        link.setAttribute('download', `${className}_Scores_${dateStr}.csv`);
+        link.style.visibility = 'hidden';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+        URL.revokeObjectURL(url);
+
+        const message = `House points for today:\n${housePointsItemized.map(item => `${item.name}: ${item.points > 0 ? '+' : ''}${item.points}`).join('\n')}\n\n${tardiesItemized.length > 0 ? `Tardies:\n${tardiesItemized.join('\n')}` : 'No tardies'}${additionalStudentsMessage.length > 0 ? `\n\nAdditional students:\n${additionalStudents.map(s => s.name).join('\n')}` : ''}\n\nReset scores?`;
+        showCustomAlert(message);
+        showTemporaryMessage('Scores exported as CSV');
     }
 }
 
