--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ const classes = [
         teacherModeOrder: msBandTeacherModeOrder,
         objectivesKey: "msBandObjectives",
         defaultObjectives: [
-            'New members!',
-            'This year at a glance',
-            'Instrument Selection'
+            'Review of existing pieces',
+            'Work within sections',
+            'Detail work on new pieces'
         ],
         sampleObjectives: [
             'Review',
@@ -152,7 +152,7 @@ const classes = [
         teacherModeOrder: msBandThursdayTeacherModeOrder,
         objectivesKey: "msBandThursdayObjectives",
         defaultObjectives: [
-            'First pieces for this year',
+            'Quick review of existing pieces',
             'Individual / sectional work',
             'Detail work'
         ],
@@ -178,9 +178,9 @@ const classes = [
         teacherModeOrder: hsBandTeacherModeOrder,
         objectivesKey: "hsBandObjectives",
         defaultObjectives: [
-            'First pieces for this year',
+            'Quick review of existing pieces',
             'Individual / sectional work',
-            'Housekeeping'
+            'Detail work on new pieces'
         ],
         sampleObjectives: [
             'Review',
